<resources>
    <string name="app_name">SofitTestTask</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Awais Abbas</string>
    <string name="nav_header_subtitle">awaisabbasaa11@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="posts">Posts</string>
    <string name="services">Services</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="lorem_ipsum">Lorem ipsum is just a dummy text used as a place holder text. It can be used in a variaty of application software.</string>
    <string name="payment_history">Payment History</string>
    <string name="government_services">Government Services</string>
    <string name="working_with_government">Working with government</string>
    <string name="here_there_visiting"><![CDATA[Here & There Visiting]]></string>
    <string name="house_buy_rent"><![CDATA[Buy & Rent Houses & Flats]]></string>
    <string name="shopings_sellings"><![CDATA[Shopings & Sellings]]></string>
    <string name="home_services">Home Services</string>
    <string name="construction">Construction</string>
    <string name="online_earning">Online Earning</string>
    <string name="consultation">Consultation</string>
    <string name="other_services">Other Services</string>
</resources>